testdata/baselines/reference/compiler/simpleTestSingleFile.errors.txt
/simpleTestSingleFile.ts(1,7): error TS2322: Type '""' is not assignable to type 'number'.


==== /simpleTestSingleFile.ts (1 errors) ====
    const x: number = "";
          ~
!!! error TS2322: Type '""' is not assignable to type 'number'.